<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/io_mehow_laboratory_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorSurface"
    tools:ignore="Overdraw"
    >

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      >

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/io_mehow_laboratory_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="?colorPrimarySurface"
        android:paddingHorizontal="@dimen/io_mehow_laboratory_spacing"
        app:currentState="@+id/io_mehow_laboratory_search_state_idle"
        app:layoutDescription="@xml/io_mehow_laboratory_toolbar_scene"
        >

      <com.google.android.material.textview.MaterialTextView
          android:id="@+id/io_mehow_laboratory_title"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/io_mehow_laboratory"
          android:textAppearance="?textAppearanceHeadline6"
          android:textColor="?colorOnPrimarySurface"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          />

      <androidx.appcompat.widget.AppCompatEditText
          android:id="@+id/io_mehow_laboratory_feature_query"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:alpha="0"
          android:background="@null"
          android:hint="@string/io_mehow_laboratory_search_features_hint"
          android:imeOptions="actionDone|flagNoExtractUi"
          android:inputType="text|textNoSuggestions"
          android:selectAllOnFocus="true"
          android:textColor="?colorOnPrimarySurface"
          android:textColorHint="@color/io_mehow_laboratory_hint_text"
          android:textCursorDrawable="@drawable/io_mehow_laboratory_hint_cursor"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toStartOf="@+id/io_mehow_laboratory_clear_query"
          app:layout_constraintStart_toEndOf="@+id/io_mehow_laboratory_toggle_search"
          app:layout_constraintTop_toTopOf="parent"
          />

      <io.mehow.laboratory.inspector.KyrieImageView
          android:id="@+id/io_mehow_laboratory_toggle_search"
          android:contentDescription="@string/io_mehow_laboratory_search_features"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toStartOf="@+id/io_mehow_laboratory_reset_features"
          app:layout_constraintTop_toTopOf="parent"
          app:srcCompat="@drawable/io_mehow_laboratory_toggle_serach"
          style="@style/IoMehowLaboratory.Widget.ActionBar.ImageView"
          />

      <androidx.appcompat.widget.AppCompatImageView
          android:id="@+id/io_mehow_laboratory_clear_query"
          android:contentDescription="@string/io_mehow_laboratory_clear_query"
          android:visibility="gone"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toStartOf="@+id/io_mehow_laboratory_reset_features"
          app:layout_constraintTop_toTopOf="parent"
          app:srcCompat="@drawable/io_mehow_laboratory_clear"
          style="@style/IoMehowLaboratory.Widget.ActionBar.ImageView"
          />

      <androidx.appcompat.widget.AppCompatImageView
          android:id="@+id/io_mehow_laboratory_reset_features"
          android:contentDescription="@string/io_mehow_laboratory_reset_features"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:srcCompat="@drawable/io_mehow_laboratory_reset_features"
          style="@style/IoMehowLaboratory.Widget.ActionBar.ImageView"
          />

    </androidx.constraintlayout.motion.widget.MotionLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/io_mehow_laboratory_tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:tabMode="scrollable"
        />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/io_mehow_laboratory_view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true"
        />

  </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
